--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "@supabase/supabase-js": "^2.47.10",
+    "@supabase/supabase-js": "^2.47.10",
     "@vercel/kv": "^3.0.0",
     "@vercel/postgres": "^0.10.0",
     "drizzle-orm": "^0.44.4",
+    "nanoid": "^5.1.5",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
