--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  
+  "redirects": [
+    {
+      "source": "/((?!divulgar|images|_next|api|favicon\\.ico|.*\\..*).*)",
+      "destination": "/divulgar",
+      "permanent": false
+    }
+  ]
 }
