--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "lightningcss": "^1.30.2",
     "supabase": "^2.47.2",
     "tailwindcss": "^4"
   }
