--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "drizzle-orm": "^0.44.4",
     "nanoid": "^5.1.5",
     "next": "15.4.5",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "uuid": "^11.1.0",
