--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [
+  "redirects": [
     {
       "source": "/",
       "has": [
@@ -8,7 +8,8 @@
           "value": "promo.kaaguy.app"
         }
       ],
-      "destination": "https://kaaguy.app/divulgar"
+      "destination": "/divulgar",
+      "permanent": false
     }
   ]
 }
